--- a/CSS/global/custom-props.css
+++ b/CSS/global/custom-props.css
@@ -23,6 +23,9 @@
     --clr-accent-5: hsl(43, 74%, 49%);
     --clr-accent-6: hsl(180, 100%, 50%);
     --clr-accent-7: hsl(39, 100%, 50%);
+    --clr-accent-8: hsl(207, 100%, 65%);
+    --clr-accent-9: hsl(286, 100%, 65%);
+    --clr-accent-10: hsl(347, 100%, 65%);
 
     --clr-check: hsl(84, 100%, 59%);
     --clr-deny: hsl(0, 100%, 59%);
