--- a/CSS/global/custom-props.css
+++ b/CSS/global/custom-props.css
@@ -41,6 +41,7 @@
     --bg-dark-7: hsla(25, 75%, 47%, 0.11);
     --bg-dark-8: hsla(28, 100%, 6%, 0.678);
     --bg-dark-9: hsla(28, 100%, 10%, 0.678);
+    --bg-dark-10: hsla(0, 0%, 0%, 0.801);
     /* ----------------------------------- */
 
     /* -------------- Fonts -------------- */
