--- a/CSS/sections/menu.css
+++ b/CSS/sections/menu.css
@@ -28,7 +28,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
+    gap: var(--gap);
     position: absolute;
     z-index: 5;
     background-color: var(--bg-dark-3);
@@ -56,7 +57,7 @@
     padding: 16px 0;
     min-width: 50px;
     border: none;
-    min-height: 50%;
+    min-height: 25%;
 }
 
 .menu__card-list {
@@ -90,8 +91,7 @@
 }
 
 .menu__card-list:has(:hover)>.menu__card:not(:hover) {
-    transform: scale(0.9);
-    opacity: 0.8;
+    opacity: 0.75;
 }
 
 .menu__carousel:has(.menu__card-list.dragging) .menu__slider-btn {
