refactor: refactor HTML, CSS, and JS modules

--- a/CSS/404/404.css
+++ b/CSS/404/404.css
@@ -1,8 +1,8 @@
-.error-page-title {
+.not-found__title {
     text-align: center;
 }
 
-.error-page-bg {
+.not-found__img {
     /* Fallbacks */
     min-height: 100vh;
 
@@ -11,4 +11,17 @@
     object-fit: cover;
     position: absolute;
     z-index: -1;
+}
+
+.not-found__btn {
+    margin: 15px auto;
+}
+
+.not-found__btn:hover {
+    --bg-clr: var(--clr-neutral-3);
+    --border-clr: var(--clr-neutral-3);
+}
+
+.not-found__link {
+    color: var(--clr-neutral-6)
 }
